[gd_scene load_steps=3 format=3 uid="uid://b8q2vhm7x8jdx"]

[ext_resource type="Script" path="res://scripts/ui/CompanyOverviewController.gd" id="1_xd7k3"]

[sub_resource type="Theme" id="Theme_1"]

[node name="CompanyOverview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme_1")
script = ExtResource("1_xd7k3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CompanyInfoPanel" type="Panel" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/CompanyInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "COMPANY OVERVIEW"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="CompanyNameLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Company: Wolf's Dragoons"

[node name="FundsLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Funds: 500,000 C-Bills"

[node name="RatingLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Rating: Green"

[node name="DateLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Date: January 1, 3025"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="ExpensesLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Monthly Expenses: 45,000 C-Bills"

[node name="IncomeLabel" type="Label" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Monthly Income: 0 C-Bills"

[node name="HSeparator3" type="HSeparator" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MechBayButton" type="Button" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Mech Bay"

[node name="StarMapButton" type="Button" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Star Map"

[node name="MainMenuButton" type="Button" parent="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Main Menu"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PersonnelPanel" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/RightPanel/PersonnelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer/RightPanel/PersonnelPanel/VBoxContainer"]
layout_mode = 2

[node name="PersonnelTitleLabel" type="Label" parent="MainContainer/RightPanel/PersonnelPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PERSONNEL ROSTER"
horizontal_alignment = 1

[node name="HirePilotButton" type="Button" parent="MainContainer/RightPanel/PersonnelPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Hire Pilot"

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel/PersonnelPanel/VBoxContainer"]
layout_mode = 2

[node name="PilotListContainer" type="ScrollContainer" parent="MainContainer/RightPanel/PersonnelPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PilotList" type="VBoxContainer" parent="MainContainer/RightPanel/PersonnelPanel/VBoxContainer/PilotListContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FactionPanel" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/RightPanel/FactionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ReputationTitleLabel" type="Label" parent="MainContainer/RightPanel/FactionPanel/VBoxContainer"]
layout_mode = 2
text = "FACTION REPUTATION"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel/FactionPanel/VBoxContainer"]
layout_mode = 2

[node name="ReputationList" type="VBoxContainer" parent="MainContainer/RightPanel/FactionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer/ButtonContainer/MechBayButton" to="." method="_on_mech_bay_button_pressed"]
[connection signal="pressed" from="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer/ButtonContainer/StarMapButton" to="." method="_on_star_map_button_pressed"]
[connection signal="pressed" from="MainContainer/LeftPanel/CompanyInfoPanel/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MainContainer/RightPanel/PersonnelPanel/VBoxContainer/HeaderContainer/HirePilotButton" to="." method="_on_hire_pilot_button_pressed"]